5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4162/executions/1638_652.log
== TEST (2019-04-08 22:38:21) 
-- CODE:
n= int(input("insira um numero de tres digitos: "))
a= n//100%10
print(a)
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 22:38:34) 
-- CODE:
n= int(input("insira um numero de tres digitos: "))
a= n//100%10
print(a)
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 22:38:46) 
-- CODE:
n= int(input("insira um numero de tres digitos: "))
a= n//100%10
print(a)
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 22:38:48) 
-- CODE:
n= int(input("insira um numero de tres digitos: "))
a= n//100%10
print(a)
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 22:38:51) 
-- CODE:
n= int(input("insira um numero de tres digitos: "))
a= n//100%10
print(a)
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 22:41:29) 
-- CODE:
n= int(input("insira um numero de tres digitos: "))
a= n//100%10
if n%a!=0:
	print("NAO")
else:
	print("SIM")
	
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 22:41:38) 
-- CODE:
n= int(input("insira um numero de tres digitos: "))
a= n//100%10
if n%a!=0:
	print("NAO")
else:
	print("SIM")
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 22:41:38) 
-- CODE:
n= int(input("insira um numero de tres digitos: "))
a= n//100%10
if n%a!=0:
	print("NAO")
else:
	print("SIM")
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 22:41:47) 
-- CODE:
n= int(input("insira um numero de tres digitos: "))
a= n//100%10
if n%a!=0:
	print("NAO")
else:
	print("SIM")
-- EXECUTION TIME:
0.149315
-- TEST CASE 1:
---- input:
728
---- correct output:
SIM
---- user output:
SIM
-- TEST CASE 2:
---- input:
789
---- correct output:
NAO
---- user output:
NAO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:08:44) 
-- CODE:
n= int(input("insira um numero de tres digitos: "))
a= n//100%10
print(a)
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:09:13) 
-- CODE:
n= int(input("insira um numero de tres digitos: "))
a= n//100%10
if n%a=0:
	print("SIM")
else:
	print("NAO")

-- EXECUTION TIME:
0.197379
-- ERROR:
  File "/home/codebench/codes/1638/652/main.py", line 3
    if n%a=0:
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:09:41) 
-- CODE:
n= int(input("insira um numero de tres digitos: "))
a= n//100%10
if n%a=0:
	print("NAO")
else:
	print("SIM")

-- EXECUTION TIME:
0.214615
-- ERROR:
  File "/home/codebench/codes/1638/652/main.py", line 3
    if n%a=0:
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:09:48) 
-- CODE:
n= int(input("insira um numero de tres digitos: "))
a= n//100%10
if n%a!=0:
	print("NAO")
else:
	print("SIM")

-- EXECUTION TIME:
0.15009
-- TEST CASE 1:
---- input:
728
---- correct output:
SIM
---- user output:
SIM
-- TEST CASE 2:
---- input:
789
---- correct output:
NAO
---- user output:
NAO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:13:49) 
-- CODE:
n= int(input("insira um numero de tres digitos: "))
a= n//100%10
if n%a!=0:
	print("NAO")
else:
	print("SIM")

-- EXECUTION TIME:
0.144955
-- TEST CASE 1:
---- input:
728
---- correct output:
SIM
---- user output:
SIM
-- TEST CASE 2:
---- input:
789
---- correct output:
NAO
---- user output:
NAO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:13:53) 
-- CODE:
n= int(input("insira um numero de tres digitos: "))
a= n//100%10
if n%a!=0:
	print("NAO")
else:
	print("SIM")

-- EXECUTION TIME:
0.143383
-- TEST CASE 1:
---- input:
728
---- correct output:
SIM
---- user output:
SIM
-- TEST CASE 2:
---- input:
789
---- correct output:
NAO
---- user output:
NAO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:13:55) 
-- CODE:
n= int(input("insira um numero de tres digitos: "))
a= n//100%10
if n%a!=0:
	print("NAO")
else:
	print("SIM")

-- EXECUTION TIME:
0.166268
-- TEST CASE 1:
---- input:
728
---- correct output:
SIM
---- user output:
SIM
-- TEST CASE 2:
---- input:
789
---- correct output:
NAO
---- user output:
NAO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:14:17) 
-- CODE:
n= int(input("insira um numero de tres digitos: "))
a= n//100%10
if n%a!=0:
	print("NAO")
else:
	print("SIM")

-- EXECUTION TIME:
0.18108
-- TEST CASE 1:
---- input:
728
---- correct output:
SIM
---- user output:
SIM
-- TEST CASE 2:
---- input:
789
---- correct output:
NAO
---- user output:
NAO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 12:32:30) 
-- CODE:
n= int(input("insira um numero de tres digitos: "))
a= n//100%10
if n%a!=0:
	print("NAO")
else:
	print("SIM")

-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
